@@ -27,6 +27,7 @@ service - GPLv3 - A service handling library.
    (10 items by revision)
 
 * v0.0.0-1 (28 oct 2011 - ???)
+- src/DependGraph.cpp can generate a graphiz output
 - WikiWordParser seems to work
 - Tested a bit a dependency parser in Boost.Spirit
 - Now uses autotools
